--- a/src/components/AppShell/AppShell.style.css
+++ b/src/components/AppShell/AppShell.style.css
@@ -1,2 +1,13 @@
 .app_shell {
+  @apply w-full h-full;
+}
+
+.app_shell__header {
+  @apply flex flex-row;
+  @apply justify-center content-center items-center;
+  @apply w-full h-20;
+}
+
+.app_shell__main {
+  @apply w-full h-full;
 }
